fixed most broken css

--- a/app/assets/stylesheets/_body.scss
+++ b/app/assets/stylesheets/_body.scss
@@ -208,3 +208,7 @@ select {
     padding: 0px;
     margin: 0 auto;
 }}
+
+.fixed{
+  position: fixed;
+}
