--- a/app/assets/stylesheets/_chatgroups.scss
+++ b/app/assets/stylesheets/_chatgroups.scss
@@ -62,6 +62,7 @@ padding: 16px 0px 0px 0px;
     height: 100%;
     padding:16px;
     overflow: auto;
+
   }
   &_messages{
     width:65%;
@@ -139,7 +140,10 @@ a.active i:after{
 }
 #content {
   overflow-y: scroll;
-  max-height: 600px;
+  max-height: 500px;
+  @include until($tablet){
+    max-height: 350px;
+  }
   width: 100%;
   padding: 1em 2em 0;
   @include scrolling-shadows(#F4F5F7);
